Atualizando a doc
